Add tests for user update and test for orders request, also add allure report